PinButton: Convert to Glimmer component

--- a/ember/app/components/pin-button.hbs
+++ b/ember/app/components/pin-button.hbs
@@ -1,5 +1,5 @@
-<BsButton @onClick={{action "toggle"}}>
-  {{#if pinned}}
+<BsButton @onClick={{this.toggle}}>
+  {{#if this.pinned}}
     {{svg-jar "star" class="fa-svg large"}} {{t "flight-pinned"}}
   {{else}}
     {{svg-jar "star-o" class="fa-svg large"}} {{t "flight-unpinned"}}
