--- a/ember/app/components/sidebar/tabs.hbs
+++ b/ember/app/components/sidebar/tabs.hbs
@@ -1,3 +1,3 @@
-<ul class="sidebar-tabs" role="tablist" ...attributes>
+<ul local-class="tabs" role="tablist" ...attributes>
   {{yield (hash Tab=(component "sidebar/tab" selectedTab=@selectedTab onSelect=@onSelect))}}
 </ul>
