--- a/ember/app/components/sidebar.hbs
+++ b/ember/app/components/sidebar.hbs
@@ -1,4 +1,4 @@
-<div class="sidebar {{if this.collapsed "collapsed"}}" ...attributes>
+<div local-class="sidebar {{if this.collapsed "collapsed"}}" ...attributes>
   {{yield (hash
     Tabs=(component "sidebar/tabs" selectedTab=this.selectedTab onSelect=this.onSelect)
     Panel=(component "sidebar/panel" visibleTab=this.visibleTab)
