--- a/ember/app/components/sidebar/tab.module.scss
+++ b/ember/app/components/sidebar/tab.module.scss
@@ -18,12 +18,13 @@
   }
 }
 
-.link {
-  display: block;
+.button {
   width: 100%;
   height: 100%;
-  line-height: 40px;
+  padding: 0;
+  border: none;
+  font: inherit;
   color: inherit;
-  text-decoration: none;
-  text-align: center;
+  background-color: transparent;
+  cursor: pointer;
 }
