--- a/ember/app/components/map-click-handler.hbs
+++ b/ember/app/components/map-click-handler.hbs
@@ -59,9 +59,11 @@
       </div>
     {{else}}
       {{#if this.closestFlight.flight}}
-        <span local-class="registration" style="background: {{this.closestFlight.flight.color}}">
-          {{this.closestFlight.flight.registration}}
-        </span>
+        {{#if this.closestFlight.flight.registration}}
+          <span local-class="registration" style="background: {{this.closestFlight.flight.color}}">
+            {{this.closestFlight.flight.registration}}
+          </span>
+        {{/if}}
         <button
           type="button"
           local-class="nearby-flights-button"
@@ -72,10 +74,16 @@
       {{/if}}
       <button
         type="button"
+        disabled={{this.loadLocationInfoTask.isRunning}}
         local-class="location-info-button"
         {{on "click" (perform this.loadLocationInfoTask)}}
       >
         Get location info
+        {{#if this.loadLocationInfoTask.isRunning}}
+          <div class="spinner spinner-white" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        {{/if}}
       </button>
     {{/if}}
   </div>
