--- a/ember/app/components/map-click-handler.hbs
+++ b/ember/app/components/map-click-handler.hbs
@@ -67,7 +67,7 @@
         <button
           type="button"
           local-class="nearby-flights-button"
-          {{on "click" this.loadNearbyFlights}}
+          {{on "click" (perform this.loadNearbyFlightsTask)}}
         >
           Load nearby flights
         </button>
