LoginForm: Move  wrapper out of the component

--- a/ember/app/templates/login.hbs
+++ b/ember/app/templates/login.hbs
@@ -1,3 +1,5 @@
 <FormPage @title={{t "login"}}>
-  <LoginForm @next={{next}} />
+  <div class="panel-body">
+    <LoginForm @next={{next}} />
+  </div>
 </FormPage>
