LoginForm: Remove link wrapper elements

--- a/ember/app/components/login-form.hbs
+++ b/ember/app/components/login-form.hbs
@@ -28,6 +28,6 @@
 
   <hr>
 
-  <div><LinkTo @route="users.recover">{{t "forgot-password"}}</LinkTo></div>
-  <div><LinkTo @route="users.new">{{t "dont-have-an-account"}}</LinkTo></div>
+  <LinkTo @route="users.recover">{{t "forgot-password"}}</LinkTo>
+  <LinkTo @route="users.new">{{t "dont-have-an-account"}}</LinkTo>
 </form>
