--- a/ember/app/components/login-form.module.scss
+++ b/ember/app/components/login-form.module.scss
@@ -4,8 +4,12 @@
   margin-bottom: inherit;
 
 
-  > div, > button {
+  > div, > button, > a {
     margin: 15px 0;
+  }
+
+  > a {
+    display: block;
   }
 
   hr {
