--- a/ember/app/components/notifications-badge.hbs
+++ b/ember/app/components/notifications-badge.hbs
@@ -1,3 +1,3 @@
-<span title={{t "notifications"}} class="badge {{if this.notifications.hasUnread "badge-warning"}}" ...attributes>
-  {{notifications.counterText}}
+<span title={{t "notifications"}} class="badge {{if this.notificationCounter.hasUnread "badge-warning"}}" ...attributes>
+  {{this.notificationCounter.counterText}}
 </span>
