--- a/ember/app/templates/flights.hbs
+++ b/ember/app/templates/flights.hbs
@@ -9,6 +9,8 @@
     </h1>
   </div>
 
+  <div class="alert alert-success" role="alert">Well done! You successfully read this important alert message.</div>
+
   <div class="row">
     <div class="col-md-12">
       {{outlet}}
