--- a/ember/app/components/comments-list.hbs
+++ b/ember/app/components/comments-list.hbs
@@ -21,7 +21,7 @@
     {{#if account.user.id}}
       <tr>
         <td>
-          <form {{action (perform this.addCommentTask) on="submit"}} data-test-add-comment>
+          <form {{on "submit" (perform this.addCommentTask)}} data-test-add-comment>
             <Textarea @value={{this.addCommentText}} class="form-control" @disabled={{this.addCommentTask.isRunning}} data-test-input /><br>
             <button type="submit" class="btn btn-primary" disabled={{this.addCommentTask.isRunning}} data-test-submit>{{t "add-comment"}}</button>
           </form>
