--- a/ember/app/components/flight-phase-table.hbs
+++ b/ember/app/components/flight-phase-table.hbs
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      {{#each phases as |phase|}}
+      {{#each @phases as |phase|}}
         <FlightPhaseRow @phase={{phase}} @selection={{selection}} @onSelect={{onSelect}} />
       {{/each}}
     </tbody>
