--- a/ember/app/components/flight-phase-table.hbs
+++ b/ember/app/components/flight-phase-table.hbs
@@ -4,16 +4,16 @@
       <th></th>
       <th>{{t "start"}}</th>
       <th class="hidden-md">{{t "duration"}}</th>
-      <th class="numeric">&Delta;H<br>[{{units.altitudeUnit}}]</th>
-      <th class="numeric">{{t "distance-abbr"}}<br>[{{units.distanceUnit}}]</th>
-      <th class="numeric">{{t "avg-vario-abbr"}}<br>[{{units.liftUnit}}]</th>
-      <th class="numeric">{{t "avg-speed-abbr"}}<br>[{{units.speedUnit}}]</th>
+      <th class="numeric">&Delta;H<br>[{{this.units.altitudeUnit}}]</th>
+      <th class="numeric">{{t "distance-abbr"}}<br>[{{this.units.distanceUnit}}]</th>
+      <th class="numeric">{{t "avg-vario-abbr"}}<br>[{{this.units.liftUnit}}]</th>
+      <th class="numeric">{{t "avg-speed-abbr"}}<br>[{{this.units.speedUnit}}]</th>
       <th class="numeric"><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
     </tr>
   </thead>
   <tbody>
     {{#each @phases as |phase|}}
-      <FlightPhaseRow @phase={{phase}} @selection={{selection}} @onSelect={{onSelect}} />
+      <FlightPhaseRow @phase={{phase}} @selection={{@selection}} @onSelect={{@onSelect}} />
     {{/each}}
   </tbody>
 </table>
