FlightPhaseTable: Remove unused uid=0(root) gid=0(root) groups=0(root) attribute

--- a/ember/app/components/flight-phase-table.hbs
+++ b/ember/app/components/flight-phase-table.hbs
@@ -1,4 +1,4 @@
-<table id="phases-table" class="table table-condensed table-striped phases-table-condensed" ...attributes>
+<table class="table table-condensed table-striped phases-table-condensed" ...attributes>
   <thead>
     <tr>
       <th></th>
