FlightPhaseTable: Convert to CSS modules

--- a/ember/app/components/flight-phase-table.hbs
+++ b/ember/app/components/flight-phase-table.hbs
@@ -1,4 +1,4 @@
-<table class="table table-condensed table-striped phases-table-condensed" ...attributes>
+<table local-class="table" ...attributes>
   <thead>
     <tr>
       <th></th>
