--- a/ember/app/components/timeline-events/club-join.hbs
+++ b/ember/app/components/timeline-events/club-join.hbs
@@ -1,20 +1,15 @@
-<tr>
-  <td class="icon">
-    {{svg-jar "group" class="fa-svg small"}}
-  </td>
-  <td>
-    <LinkTo @route="club" @model={{event.club.id}} class="btn btn-default btn-sm pull-right">{{t "show"}}</LinkTo>
-    <p>
-      {{#if event.unread}}<span class="badge badge-warning">{{t "new"}}</span>{{/if}}
-      <small><abbr title={{format-time event.time format="full"}}>{{format-relative event.time}}</abbr></small>
-    </p>
-    <p>
-      {{t translationKey
-        htmlSafe=true
-        actor=event.actor.name
-        actorURL=(href-to "user" event.actor.id)
-        club=event.club.name
-        clubURL=(href-to "club" event.club.id)}}
-    </p>
-  </td>
-</tr>
+<TimelineEvents::Ui
+  @icon="group"
+  @smallIcon={{true}}
+  @url={{href-to "club" event.club.id}}
+  @newBadge={{event.unread}}
+  @time={{event.time}}
+  @text={{t
+    translationKey
+    htmlSafe=true
+    actor=event.actor.name
+    actorURL=(href-to "user" event.actor.id)
+    club=event.club.name
+    clubURL=(href-to "club" event.club.id)
+  }}
+/>
