--- a/ember/app/components/timeline-events/flight-comment.hbs
+++ b/ember/app/components/timeline-events/flight-comment.hbs
@@ -1,20 +1,14 @@
-<tr>
-  <td class="icon">
-    {{svg-jar "comments-o" class="fa-svg"}}
-  </td>
-  <td>
-    <LinkTo @route="flight" @model={{event.flight.id}} class="btn btn-default btn-sm pull-right">{{t "show"}}</LinkTo>
-    <p>
-      {{#if event.unread}}<span class="badge badge-warning">{{t "new"}}</span>{{/if}}
-      <small><abbr title={{format-time event.time format="full"}}>{{format-relative event.time}}</abbr></small>
-    </p>
-    <p>
-      {{t translationKey
-        htmlSafe=true
-        actor=event.actor.name
-        actorURL=(href-to "user" event.actor.id)
-        distance=(format-distance event.flight.distance)
-        date=(format-date event.flight.date format="ddmmyyyy")}}
-    </p>
-  </td>
-</tr>
+<TimelineEvents::Ui
+  @icon="comments-o"
+  @url={{href-to "flight" event.flight.id}}
+  @newBadge={{event.unread}}
+  @time={{event.time}}
+  @text={{t
+    translationKey
+    htmlSafe=true
+    actor=event.actor.name
+    actorURL=(href-to "user" event.actor.id)
+    distance=(format-distance event.flight.distance)
+    date=(format-date event.flight.date format="ddmmyyyy")}}
+  }}
+/>
