Convert  usage to CSS modules

--- a/ember/app/components/timeline.hbs
+++ b/ember/app/components/timeline.hbs
@@ -1,4 +1,4 @@
-<table class="table table-events" ...attributes>
+<table class="table" ...attributes>
   <tbody>
   {{#each @events as |event|}}
     <TimelineEvent @event={{event}} />
