--- a/ember/app/templates/timeline.hbs
+++ b/ember/app/templates/timeline.hbs
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <Timeline @events={{events}} />
+      <Timeline @events={{events}} local-class="timeline" />
 
       <div class="row">
         <div class="col-xs-6">
