--- a/ember/app/components/timeline-events/ui.hbs
+++ b/ember/app/components/timeline-events/ui.hbs
@@ -8,7 +8,7 @@
       {{#if @newBadge}}<span local-class="new-badge">{{t "new"}}</span>{{/if}}
       <small><abbr title={{format-time @time format="full"}}>{{format-relative @time}}</abbr></small>
     </p>
-    <p local-class="text">
+    <p local-class="text" data-test-text>
       {{@text}}
     </p>
   </td>
