Reimplement  components using CSS grid

--- a/ember/app/components/timeline-events/ui.hbs
+++ b/ember/app/components/timeline-events/ui.hbs
@@ -1,15 +1,19 @@
-<tr>
-  <td local-class="icon">
-    {{svg-jar @icon class=(if @smallIcon "fa-svg small" "fa-svg")}}
-  </td>
-  <td>
-    <a href={{@url}} class="btn btn-default btn-sm pull-right">{{t "show"}}</a>
-    <p>
-      {{#if @newBadge}}<span local-class="new-badge">{{t "new"}}</span>{{/if}}
-      <small><abbr title={{format-time @time format="full"}}>{{format-relative @time}}</abbr></small>
-    </p>
-    <p local-class="text" data-test-text>
+<div local-class="event">
+  {{svg-jar @icon local-class="icon" class=(if @smallIcon "fa-svg small" "fa-svg")}}
+
+  <div>
+    <div local-class="badge-and-time">
+      <abbr title={{format-time @time format="full"}} local-class="time">{{format-relative @time}}</abbr>
+
+      {{#if @newBadge}}
+        <span local-class="new-badge">{{t "new"}}</span>
+      {{/if}}
+    </div>
+
+    <div local-class="text" data-test-text>
       {{@text}}
-    </p>
-  </td>
-</tr>
+    </div>
+  </div>
+
+  <a href={{@url}} local-class="show-button">{{t "show"}}</a>
+</div>
