--- a/ember/app/components/settings-panels/tracking-key.hbs
+++ b/ember/app/components/settings-panels/tracking-key.hbs
@@ -11,7 +11,7 @@
     {{/if}}
 
     <p style="margin: 10px 0px 20px;">
-      {{t "your-live-tracking-key"}} <span class="label tracking-key">{{key}}</span>
+      {{t "your-live-tracking-key"}} <span local-class="tracking-key">{{key}}</span>
     </p>
 
     <form {{action (perform saveTask) on="submit"}}>
