--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -1,4 +1,6 @@
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+$font-size-base: 13px;
+$font-size-small: 11px;
 $headings-font-weight: 700;
 $zindex-popover: 5000;
 $zindex-tooltip: 6000;
