--- a/ember/app/components/circling-performance-row.hbs
+++ b/ember/app/components/circling-performance-row.hbs
@@ -5,7 +5,7 @@
     {{format-lift @perf.vario}}
   </td>
   <td class="numeric">
-    <abbr title={{format-number @perf.fraction maximumFractionDigits=1}}>{{format-seconds @perf.duration}}</abbr><br>
+    {{format-seconds @perf.duration}}<br>
     {{format-altitude @perf.altDiff}}
   </td>
 
