--- a/ember/app/components/timeline-events/ui.hbs
+++ b/ember/app/components/timeline-events/ui.hbs
@@ -3,13 +3,7 @@
 
   <div>
     <div local-class="badge-and-time">
-      <time
-        datetime={{to-iso-string @time}}
-        title={{format-time @time format="full"}}
-        local-class="time"
-      >
-        {{format-relative @time}}
-      </time>
+      <abbr title={{format-time @time format="full"}} local-class="time">{{format-relative @time}}</abbr>
 
       {{#if @newBadge}}
         <span local-class="new-badge">{{t "new"}}</span>
