NavBar: Convert to CSS modules

--- a/ember/app/components/nav-bar-menu-right.hbs
+++ b/ember/app/components/nav-bar-menu-right.hbs
@@ -11,7 +11,7 @@
     <nav.item>
       {{#nav.link-to "notifications" class="notifications"}}
         <span class="visible-xs-inline-block">{{t "notifications"}}&nbsp;&nbsp;</span>
-        <NotificationsBadge />
+        <NotificationsBadge local-class="badge" />
       {{/nav.link-to}}
     </nav.item>
 
