--- a/ember/app/components/nav-bar-search-form.hbs
+++ b/ember/app/components/nav-bar-search-form.hbs
@@ -1,5 +1,6 @@
 <form
   action="/search"
+  local-class="form"
   class="navbar-form navbar-left navbar-search visible-lg"
   onsubmit={{action @onSearch this.searchTextService.text}}
   ...attributes
@@ -10,7 +11,7 @@
       @name="text"
       @value={{this.searchTextService.text}}
       placeholder={{t "search.search"}}
-      class="form-control"
+      local-class="input"
     />
   </div>
 </form>
